# automated-fund-transfer

./: Cargo.toml  README.md  sample.service  sample_config.toml  sample_mainnet_config.toml  sample_testnet_config.toml
src/: main.rs
