[package]
name = "automated-fund-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11" 
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.7"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
solana-client = "=2.3.11"
solana-sdk = "2.2.1"
solana-commitment-config = "2.2.1"
solana-system-interface = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
humantime = "2"
clap = { version = "4", features = ["derive"] }


# optional: use this if you want basic retry logic
futures-retry = "0.3"